--- a/paper/supp/supp.tex
+++ b/paper/supp/supp.tex
@@ -35,82 +35,82 @@
 
 \begin{document}
 
-% %%% Title page
-% \begin{titlepage}
-%   \centering
-%   \vspace*{10mm}
-%   % \includegraphics[width=2.8cm]{logo.png} \\[10mm]
-%   \Large\textsc{Supplementary Material for} \\[5mm]
-%   \huge\textbf{Smash++: finding rearrangements} \\[12mm]
-%   \Large Morteza Hosseini\textsuperscript{1}, Diogo Pratas\textsuperscript{1,2}, Armando J. Pinho\textsuperscript{1} \\[6mm]
-%   \normalsize \textsuperscript{1}IEETA/DETI, University of Aveiro, Portugal \\[1mm]
-%   \textsuperscript{2}Department of Virology, University of Helsinki, Finland \\[4mm]
-%   {\ttfamily\{seyedmorteza,pratas,ap\}@ua.pt}
+%%% Title page
+\begin{titlepage}
+  \centering
+  \vspace*{10mm}
+  % \includegraphics[width=2.8cm]{logo.png} \\[10mm]
+  \Large\textsc{Supplementary Material for} \\[5mm]
+  \huge\textbf{Smash++: finding rearrangements} \\[12mm]
+  \Large Morteza Hosseini\textsuperscript{1}, Diogo Pratas\textsuperscript{1,2}, Armando J. Pinho\textsuperscript{1} \\[6mm]
+  \normalsize \textsuperscript{1}IEETA/DETI, University of Aveiro, Portugal \\[1mm]
+  \textsuperscript{2}Department of Virology, University of Helsinki, Finland \\[4mm]
+  {\ttfamily\{seyedmorteza,pratas,ap\}@ua.pt}
   
-%   \vspace{\fill}
-%   \thispagestyle{empty}
-%   \raggedright
-%   \setstretch{1.2}
-%   \normalsize\tableofcontents
-% \end{titlepage}
+  \vspace{\fill}
+  \thispagestyle{empty}
+  \raggedright
+  \setstretch{1.2}
+  \normalsize\tableofcontents
+\end{titlepage}
 
 \defaultLineSpace    		%%% Line spacing
 
-% \clearpage
-% \section{GGA 18 compared to MGA 20}
-% \begin{figure}[!h]
-%   \centering
-%   \includegraphics[width=.85\linewidth]{fig/GGA18_MGA20.pdf}
-%   \caption{Pair-wise comparison of \textit{G.~gallus} chromosome~18 and \textit{M.~gallopavo} chromosome~20.
-%   (a)~Smash++, with $k=14$ and~5 used by an FCM and an STMM, respectively. The blocks smaller than 500~Kb are discarded;
-%   (b)~progressiveMauve~\cite{darling2010progressivemauve}, with LCB (locally collinear block) weight of~18692. Reverse complements are shown in lower level;
-%   (c)~adopted from \cite{zhang2011comparative}, which is confirmed by fluorescence \textit{in~situ hybridization} (FISH) analysis. The box shows a local rearrangement;
-%   (d)~SynBrowser~\cite{lee2016synteny}, with the resolution of~150~Kb (minimum size of a reference block);
-%   (e)~adopted from~\cite{dalloul2010multi}, which confirms an inversion rearrangement of size $\sim$5~Mb by FISH analysis.}
-%   \label{fig.supp.GGA18.MGA20}
-% \end{figure}
+\clearpage
+\section{GGA 18 compared to MGA 20}
+\begin{figure}[!h]
+  \centering
+  \includegraphics[width=.85\linewidth]{fig/GGA18_MGA20.pdf}
+  \caption{Pair-wise comparison of \textit{G.~gallus} chromosome~18 and \textit{M.~gallopavo} chromosome~20.
+  (a)~Smash++, with $k=14$ and~5 used by an FCM and an STMM, respectively. The blocks smaller than 500~Kb are discarded;
+  (b)~progressiveMauve~\cite{darling2010progressivemauve}, with LCB (locally collinear block) weight of~18692. Reverse complements are shown in lower level;
+  (c)~adopted from \cite{zhang2011comparative}, which is confirmed by fluorescence \textit{in~situ hybridization} (FISH) analysis. The box shows a local rearrangement;
+  (d)~SynBrowser~\cite{lee2016synteny}, with the resolution of~150~Kb (minimum size of a reference block);
+  (e)~adopted from~\cite{dalloul2010multi}, which confirms an inversion rearrangement of size $\sim$5~Mb by FISH analysis.}
+  \label{fig.supp.GGA18.MGA20}
+\end{figure}
 
-% \clearpage
-% \section{GGA 14 compared to MGA 16}
-% \begin{figure}[!h]
-%   \centering
-%   \includegraphics[width=.85\linewidth]{fig/GGA14_MGA16.pdf}
-%   \caption{\textit{G.~gallus} chromosome~14 compared to \textit{M.~gallopavo} chromosome~16.
-%    (a)~Smash++, employing an FCM and an STMM with $k=14$ and~5, respectively. The blocks smaller than 400~Kb are discarded;
-%    (b)~progressiveMauve, with LCB weight of~27424;
-%    (c)~adopted from \cite{zhang2011comparative}. The box shows an inversion rearrangement; 
-%    (d)~SynBrowser, with the resolution of~150~Kb.
-%   }
-%   \label{fig.supp.GGA14.MGA16}
-% \end{figure}
+\clearpage
+\section{GGA 14 compared to MGA 16}
+\begin{figure}[!h]
+  \centering
+  \includegraphics[width=.85\linewidth]{fig/GGA14_MGA16.pdf}
+  \caption{\textit{G.~gallus} chromosome~14 compared to \textit{M.~gallopavo} chromosome~16.
+   (a)~Smash++, employing an FCM and an STMM with $k=14$ and~5, respectively. The blocks smaller than 400~Kb are discarded;
+   (b)~progressiveMauve, with LCB weight of~27424;
+   (c)~adopted from \cite{zhang2011comparative}. The box shows an inversion rearrangement; 
+   (d)~SynBrowser, with the resolution of~150~Kb.
+  }
+  \label{fig.supp.GGA14.MGA16}
+\end{figure}
 
-% \clearpage
-% \section{HS 12 compared to PT 12}
-% \begin{figure}[!h]
-%   \centering
-%   \includegraphics[width=.75\linewidth]{fig/HS12_PT12.pdf}
-%   \caption{Comparison of \textit{H.~sapiens} chromosome~12 and \textit{P.~troglodytes} chromosome~12.
-%    (a)~Smash++, with $k=14$ used by an FCM. The blocks smaller than 100~Kb are discarded;
-%    (b)~progressiveMauve, with LCB weight of~55186;
-%    (c)~Cinteny~\cite{sinha2007cinteny}, with minimum length of synteny block $=1~$Kb, maximum gap between adjacent markers $=5~$Mb and minimum number of markers $=1$;
-%    (d)~SynBrowser, with the resolution of~150~Kb;
-%    (e)~D-Genies~\cite{cabanettes2018d}, in ``strong precision'' mode.
-%   }
-%   \label{fig.supp.HS12.PT12}
-% \end{figure}
+\clearpage
+\section{HS 12 compared to PT 12}
+\begin{figure}[!h]
+  \centering
+  \includegraphics[width=.75\linewidth]{fig/HS12_PT12.pdf}
+  \caption{Comparison of \textit{H.~sapiens} chromosome~12 and \textit{P.~troglodytes} chromosome~12.
+   (a)~Smash++, with $k=14$ used by an FCM. The blocks smaller than 100~Kb are discarded;
+   (b)~progressiveMauve, with LCB weight of~55186;
+   (c)~Cinteny~\cite{sinha2007cinteny}, with minimum length of synteny block $=1~$Kb, maximum gap between adjacent markers $=5~$Mb and minimum number of markers $=1$;
+   (d)~SynBrowser, with the resolution of~150~Kb;
+   (e)~D-Genies~\cite{cabanettes2018d}, in ``strong precision'' mode.
+  }
+  \label{fig.supp.HS12.PT12}
+\end{figure}
 
-% \clearpage
-% \section{PXO99A compared to MAFF 311018}
-% \begin{figure}[!h]
-%   \centering
-%   \includegraphics[width=\linewidth]{fig/PXO99A_MAFF311018.pdf}
-%     \caption{Pair-wise comparison of PXO99A and MAFF 311018.
-%      (a)~Smash++, with k=13 used by an FCM. The blocks smaller than 10~Kb are discarded. In order to make the figure clearer, the shaded paths for connecting corresponding regions are not drawn;
-%      (b)~progressiveMauve, with LCB weight of~3926;
-%      (c)~adopted from~\cite{salzberg2008genome}, which employs an alignment-based method to obtain this dot plot. The blue and red colors shows regions of PXO99A that align to the same or opposite strand of MAFF 311018, respectively.
-%     }
-%     \label{fig.supp.PXO99A.MAFF_311018}
-% \end{figure}
+\clearpage
+\section{PXO99A compared to MAFF 311018}
+\begin{figure}[!h]
+  \centering
+  \includegraphics[width=\linewidth]{fig/PXO99A_MAFF311018.pdf}
+    \caption{Pair-wise comparison of PXO99A and MAFF 311018.
+     (a)~Smash++, with k=13 used by an FCM. The blocks smaller than 10~Kb are discarded. In order to make the figure clearer, the shaded paths for connecting corresponding regions are not drawn;
+     (b)~progressiveMauve, with LCB weight of~3926;
+     (c)~adopted from~\cite{salzberg2008genome}, which employs an alignment-based method to obtain this dot plot. The blue and red colors shows regions of PXO99A that align to the same or opposite strand of MAFF 311018, respectively.
+    }
+    \label{fig.supp.PXO99A.MAFF_311018}
+\end{figure}
 
 \clearpage
 \section{Tool availability and implementation}
@@ -174,6 +174,9 @@ Various options are provided with the interface of the proposed tool, which are 
 ./smashpp [OPTIONS]  -r <REF-FILE>  -t <TAR-FILE>
 \end{code}
 
+\DeclareRobustCommand{\default}[1]{\hspace*{0mm}\colorbox{lightgray!30}{\footnotesize Default: #1}}
+\DeclareRobustCommand{\defaultbox}[1]{\colorbox{lightgray!30}{\footnotesize #1}}
+
 \begin{small}
 \begin{tabularx}{\linewidth}{@{}lp{2.9cm}X@{}}
   \caption{Options provided by \smashpp interface.}
@@ -187,52 +190,53 @@ Various options are provided with the interface of the proposed tool, which are 
   && It is recommended to have short names. \\
   \midrule
   \multicolumn{3}{@{}l@{}}{\textit{Optional}} \\
-  \mono{-l} & Integer: $[0, 6]$\newline Default: 3 & Level of compression. \\
+  \mono{-l} & Integer: $[0, 6]$\newline \default{3} & Level of compression. \\
   \midrule
-  \mono{-m} & Integer: $[1, 2^{32}-1]$\newline Default: 50 & Minimum segment size. Only the regions that have greater sizes than this value would be considered for compression. \\
+  \mono{-m} & Integer: $[1, 2^{32}-1]$\newline \default{50} & Minimum segment size. Only the regions that have greater sizes than this value would be considered for compression. \\
   \midrule
-  \mono{-e} & Float: $[0.0, 100.0]$\newline Default: 2.0 & Entropy of `N' bases. In implementation of the reference-based compression, we replace `N's in references and targets with `A's and `T's, respectively. On reference-free compression, we replace them with `A's, in both references and targets. If a user tends to replace `N' bases in a sequence with a normal distribution of `A', `C', `G' and `T's, he/she can employ GOOSE toolkit~\cite{web-goose}. \\
+  \mono{-e} & Float: $[0.0, 100.0]$\newline \default{2.0} & Entropy of `N' bases. In implementation of the reference-based compression, we replace `N's in references and targets with `A's and `T's, respectively. On reference-free compression, we replace them with `A's, in both references and targets. If a user tends to replace `N' bases in a sequence with a normal distribution of `A', `C', `G' and `T's, he/she can employ GOOSE toolkit~\cite{web-goose}. \\
   \midrule
-  \mono{-n} & Integer: $[1, 255]$\newline Default: 4 & Number of threads. Creating multiple finite-context models and substitution-tolerant Markov models can be done in a multi-threaded fashion. \\
+  \mono{-n} & Integer: $[1, 255]$\newline \default{4} & Number of threads. Creating multiple finite-context models and substitution-tolerant Markov models can be done in a multi-threaded fashion. \\
   \midrule
-  \mono{-f} & Integer: $[1, 2^{32}-1]$\newline Default: 256 & Filter size. In the process of finding similar regions in the reference and the target sequences, the information content that would be obtained by compression needs to be filtered. \\
+  \mono{-f} & Integer: $[1, 2^{32}-1]$\newline \default{256} & Filter size. In the process of finding similar regions in the reference and the target sequences, the information content that would be obtained by compression needs to be filtered. \\
   \midrule
-  \mono{-ft} & Integer or String:\newline \{0/rectangular, 1/hamming, 2/hann, 3/blackman, 4/triangular, 5/welch, 6/sine, 7/nuttall\}\newline Default: hann & Filter type (windowing function). Besides Hann window that is used by default to smooth the information content (profile), we have implemented several other windowing functions: Blackman~\cite{blackman1959particular}, Hamming~\cite{tukey1949measuring}, Nuttall~\cite{nuttall1981some}, rectangular~\cite{oppenheim1999discrete}, sine~\cite{harris1978use}, triangular~\cite{bartlett1950periodogram} and Welch~\cite{welch1967use} windows. These functions along with Hann function are given by Equation~\ref{eq.filter} and are plotted in Fig.~\ref{fig.filters}. \\
+  \mono{-ft} & Integer or String:\newline \{0/rectangular, 1/hamming, 2/hann, 3/blackman, 4/triangular, 5/welch, 6/sine, 7/nuttall\}\newline \default{hann} & Filter type (windowing function). Besides Hann window that is used by default to smooth the information content (profile), we have implemented several other windowing functions: Blackman~\cite{blackman1959particular}, Hamming~\cite{tukey1949measuring}, Nuttall~\cite{nuttall1981some}, rectangular~\cite{oppenheim1999discrete}, sine~\cite{harris1978use}, triangular~\cite{bartlett1950periodogram} and Welch~\cite{welch1967use} windows. These functions along with Hann function are given by Equation~\ref{eq.filter} and are plotted in Fig.~\ref{fig.filters}. \\
   \midrule
   \mono{-fs} & Char or String:\newline \{S/small, M/medium, L/large\}
   % \newline Default: large
    & Filter scale. It automatically chooses filter size. If a user does not use this flag, the ``-f'' flag will handle the filtering size.  \\
   \midrule
-  \mono{-d} & Integer: $[1, 2^{64}-1]$\newline Default: 1 & Sampling steps. Instead of considering the whole information content, this option can be used to make samples of it. \\
+  \mono{-d} & Integer: $[1, 2^{64}-1]$ & Sampling steps. Instead of considering the whole information content, we can make samples of it. The default value is $\lceil\min\left(\lvert\textrm{ref}\rvert, \lvert\textrm{tar}\rvert\right) /\, 5000\rceil$. Therefore, if this flag is not entered by user, a maximum number of 5000 values of the information content will be considered. \\
   \midrule
-  \mono{-th} & Float: $[0.0, 20.0]$\newline Default: 1.5 & Threshold for entropy. This option can be used for segmenting the filtered information content. \\
+  \mono{-th} & Float: $[0.0, 20.0]$\newline \default{1.5} & Threshold for entropy. This option can be used for segmenting the filtered information content. \\
   % For the purpose of segmenting the filtered information content, the average entropy of reference-based compression is used by default as the threshold, but the threshold can be altered by this option. \\
   \midrule
   \mono{-rb} & Integer: $[-2^{15}, 2^{15}-1]$ & Reference beginning guard. \\
   \mono{-re} & Integer: $[-2^{15}, 2^{15}-1]$ & Reference ending guard. \\
   \mono{-tb} & Integer: $[-2^{15}, 2^{15}-1]$ & Target beginning guard. \\
   \mono{-te} & Integer: $[-2^{15}, 2^{15}-1]$ & Target ending guard. \\
-  & Default: 0 & \smashpp is capable of finding even very small similar regions in two sequences. However, we have found experimentally that when it is running in a very sensitive mode, there might be some cases in which the size of similar regions in the reference and the target are not balanced. These cases can be handled by ``-rb'', ``-re'', ``-tb'' and ``-te'' options, that can resize the beginning and ending guards of reference and target regions, respectively. For example, if ``-tb 10'' is used, the first 10 bases in each target region will be discarded, which results in smaller regions. Note that when the guard sizes of target regions are increased, the models built from these regions would be slightly different than the original models; consequently, the sizes of reference regions that are detected as being similar to the ones from the target would be modified, as well. Therefore, changing the guard sizes of target regions will affect the sizes of reference regions. In the case of activating deep compression, by ``-dp'', changing the guard sizes of reference regions would affect the sizes of target regions, as well. \\
+  & \default{0} & \smashpp is capable of finding even very small similar regions in two sequences. However, we have found experimentally that when it is running in a very sensitive mode, there might be some cases in which the size of similar regions in the reference and the target are not balanced. These cases can be handled by ``-rb'', ``-re'', ``-tb'' and ``-te'' options, that can resize the beginning and ending guards of reference and target regions, respectively. For example, if ``-tb 10'' is used, the first 10 bases in each target region will be discarded, which results in smaller regions. Note that when the guard sizes of target regions are increased, the models built from these regions would be slightly different than the original models; consequently, the sizes of reference regions that are detected as being similar to the ones from the target would be modified, as well. Therefore, changing the guard sizes of target regions will affect the sizes of reference regions. In the case of activating deep compression, by ``-dp'', changing the guard sizes of reference regions would affect the sizes of target regions, as well. \\
   \midrule
-  \mono{-ar} & --- & Consider asymmetric regions. It makes \smashpp not to balance the similar reference and target regions. \\
+  \mono{-ar} & N/A & Consider asymmetric regions. It makes \smashpp not to balance the similar reference and target regions. \\
   \midrule
-  \mono{-dp} & --- & Deep compression. It means that similar regions in target and reference sequences are found in three phases, instead of two: 1)~the model of the reference is built and the target is compressed based upon that model, 2)~the model of each detected region is built and the whole reference is compressed based on these models and 3)~the model of each detected reference region is built and the corresponding target regions will be compressed based on that model. \\
+  \mono{-dp} & N/A & Deep compression. It means that similar regions in target and reference sequences are found in three phases, instead of two: 1)~the model of the reference is built and the target is compressed based upon that model, 2)~the model of each detected region is built and the whole reference is compressed based on these models and 3)~the model of each detected reference region is built and the corresponding target regions will be compressed based on that model. \\
   \midrule
-  \mono{-nr} & --- & Do not compute self complexity. It makes the tool not to perform the reference-free compression (self-complexity computation). \\
+  \mono{-nr} & N/A & Do not compute self complexity. It makes the tool not to perform the reference-free compression (self-complexity computation). \\
   \midrule
-  \mono{-sb} & --- & Save sequence (input: FASTA/FASTQ). \smashpp accepts as input \fasta and \fastq files, in addition to bare sequences. In these cases, the input files are first converted to sequences and then processed further. It is possible to save these sequences by this option. \\
+  \mono{-sb} & N/A & Save sequence (input: FASTA/FASTQ). \smashpp accepts as input \fasta and \fastq files, in addition to bare sequences. In these cases, the input files are first converted to sequences and then processed further. It is possible to save these sequences by this option. \\
   \midrule
-  \mono{-sp} & --- & Save profile, *.prf. When the information profile is obtained, \smashpp smoothens then removes it, by default; however, it can be preserved by this option. \\
+  \mono{-sp} & N/A & Save profile, *.prf. When the information profile is obtained, \smashpp smoothens then removes it, by default; however, it can be preserved by this option. \\
   \midrule
-  \mono{-sf} & --- & Save filtered file, *.fil. The filtered profile is segmented then removed, by default; however, it can be preserved by this option. \\
+  \mono{-sf} & N/A & Save filtered file, *.fil. The filtered profile is segmented then removed, by default; however, it can be preserved by this option. \\
   \midrule
-  \mono{-ss} & --- & Save segmented files, *.s$_i$. \\
+  \mono{-ss} & N/A & Save segmented files, *.s$_i$. \\
   \midrule
-  \mono{-sa} & --- & Save all generated files, including profile, filtered and segmented files. \\
+  \mono{-sa} & N/A & Save all generated files, including profile, filtered and segmented files. \\
   \midrule
   \mono{-rm} & $k$,[$w$,$d$,]ir,$\alpha$,$\gamma$/$t$,ir,$\alpha$,$\gamma$:... & Parameters of reference models. \\
   \mono{-tm} & $k$,[$w$,$d$,]ir,$\alpha$,$\gamma$/$t$,ir,$\alpha$,$\gamma$:... & Parameters of target models: \\
-& Default: \scalebox{0.8}{$14,0,0.001,0.95/5,0,0.001,0.95$} & \begin{minipage} [t] {9cm}
+& \default{}\newline\defaultbox{\scalebox{0.75}{$14,0,0.001,0.95/5,0,0.001,0.95$}}
+ & \begin{minipage} [t] {9cm}
   \begin{itemize}
     \item $k$ (integer $>1$): context size,
     \item $w$ (integer $<2^{64}-1$): Count-Min-Log sketch width in $\log_2$ form, e.g., set 10 for $w=2^{10}=1024$,
@@ -245,11 +249,11 @@ Various options are provided with the interface of the proposed tool, which are 
 \end{minipage} \\
   && It is recommended for compression to use ``-l'' option, since it configures the models automatically. However, using ``-rm'' and ``-tm'', the user would be able to manually configure the reference model, for reference-based compression, and the target model, for reference-free compression, respectively. Parameters of models are described in detail in the section ``Methods'' of the main paper. \\
   \midrule
-  \mono{-ll} & --- & List of compression levels. It shows the list of parameters that would be chosen automatically for each model. \\
+  \mono{-ll} & N/A & List of compression levels. It shows the list of parameters that would be chosen automatically for each model. \\
   \midrule
-  \mono{-h} & --- & Usage guide. \\
+  \mono{-h} & N/A & Usage guide. \\
   \midrule
-  \mono{-v} & --- & More information (verbose). \\
+  \mono{-v} & N/A & More information (verbose). \\
   \midrule
   \multicolumn{2}{@{}l}{\mono{--version}} & Show the version. \\
   \bottomrule
@@ -305,7 +309,7 @@ and a body including:
 As an example, the header of the following ``.pos'' file shows that \smashpp was run by the parameters ``-r dataset/REF -t dataset/TAR -l 0 -m 1000'' and also the reference ``REF'' and the target ``TAR'' are 50,000 base long. The body shows that there is a reference block, from the position 5000 up to 10000, similar to a target block, from the position 2000 to 7000. Relative redundancy of compressing the TAR block, using the REF block as reference, is 1.2473. This number is 1.0187 when the REF block is compressed based on the model of the TAR block. Also, redundancies (complexities) of the REF and the TAR blocks are 1.9010 and 1.8580, respectively. The ``F'' in the last column shows that this similarity is not of the form inverted repeat. The second record of the body shows an inverted repeat rearrangement.
 \begin{code}[style=bash]
 ##SMASH++
-##PARAM=<-r dataset/REF -t dataset/TAR -l 0 -m 1000>
+##PARAM=<-r dataset/REF -t dataset/TAR -l 1 -m 1000>
 ##INFO=<Ref=REF,RefSize=50000,Tar=TAR,TarSize=50000>
 #RBeg  REnd   RRelRdn  RRdn    TBeg   TEnd   TRelRdn  TRdn    Inv
 5000   10000  1.0187   1.9010  2000   7000   1.2473   1.8580  F
@@ -323,7 +327,7 @@ The visualizer provides various options that are described in Table~\ref{tab.opt
 \end{code}
 
 \begin{small}
-  \begin{tabularx}{\linewidth}{@{}lp{2.6cm}X@{}}
+  \begin{tabularx}{\linewidth}{@{}lp{2.4cm}X@{}}
     \caption{Options provided by \smashpp visualizer interface.}
     \label{tab.options.viz} \\
     \toprule
@@ -333,48 +337,44 @@ The visualizer provides various options that are described in Table~\ref{tab.opt
     & *.pos file & Position file, generated by \smashpp tool. Spaces in the name is supported. It can be redirected to \smashpp by standard input (``stdin''). \\
     \midrule
     \multicolumn{3}{@{}l@{}}{\textit{Optional}} \\
-    \mono{-o} & *.svg file\newline Default: map.svg & Output image name. \\
+    \mono{-o} & *.svg file\newline \default{map.svg} & Output image name. \\
     \midrule
     \mono{-rn} & String & Reference name shown on output. \\
     \mono{-tn} & String & Target name shown on output. \\
-    & Default: names in position file's header & If it has some spaces, use double quotes, e.g. ``Seq label''. \\
+    & \default{names in}\newline\defaultbox{position file's header} & If it has some spaces, use double quotes, e.g. ``Seq label''. \\
     \midrule
-    \mono{-l} & Integer: $[1, 6]$\newline Default: 1 & Type of the link between similar regions. \\
+    \mono{-l} & Integer: $[1, 6]$\newline \default{1} & Type of the link between similar regions. \\
     \midrule
-    \mono{-c} & Integer: $[0, 1]$\newline Default: 0 & Color mode. \\
+    \mono{-c} & Integer: $[0, 1]$\newline \default{0} & Color mode. \\
     \midrule
-    \mono{-p} & Float: $[0.0, 1.0]$\newline Default: 0.9 & Opacity. \\
+    \mono{-p} & Float: $[0.0, 1.0]$\newline \default{0.9} & Opacity. \\
     \midrule
-    \mono{-w} & Integer: $[8, 100]$\newline Default: 10 & Width of the sequence. \\
+    \mono{-w} & Integer: $[8, 100]$\newline \default{10} & Width of the sequence. \\
     \midrule
-    \mono{-s} & Integer: $[5, 200]$\newline Default: 40 & Space between sequences. \\
+    \mono{-s} & Integer: $[5, 200]$\newline \default{40} & Space between sequences. \\
     \midrule
     \mono{-tc} & Integer: $[1, 255]$ & Total number of colors in the map, which is automatically chosen by default. \\
     \midrule
-    % \mono{-f} & Integer: $[1, 255]$\newline Default: 43 & Multiplication factor for color ID. \\
-    % \midrule
-    % \mono{-b} & Integer: $[0, 255]$\newline Default: 0 & Beginning of color ID. \\
-    % \midrule
     \mono{-rt} & Integer: $[1, 2^{32}-1]$ & Reference tick size. \\
     \mono{-tt} & Integer: $[1, 2^{32}-1]$ & Target tick size. \\
     \midrule
-    \mono{-th} & Integer: $\{0, 1\}$\newline Default: 1 & Tick human readable: 0=false, 1=true. If it is true, the sizes on axes are printed in the format 1K, 2M, etc. Note that here, 1K is equivalent to 1000 and not 1024, and so on. \\
+    \mono{-th} & Integer: $\{0, 1\}$\newline \default{1} & Tick human readable: 0=false, 1=true. If it is true, the sizes on axes are printed in the format 1K, 2M, etc. Note that here, 1K is equivalent to 1000 and not 1024, and so on. \\
     \midrule
-    \mono{-m} & Integer: $[1, 2^{32}-1]$\newline Default: 1 & Minimum block size. Only the regions with greater sizes than this value will be illustrated. \\
+    \mono{-m} & Integer: $[1, 2^{32}-1]$\newline \default{1} & Minimum block size. Only the regions with greater sizes than this value will be illustrated. \\
     \midrule
-    \mono{-vv} & --- & Vertical view of the output image. \\
+    \mono{-vv} & N/A & Vertical view of the output image. \\
     \midrule
-    \mono{-nn} & --- & Do not show normalized relative compression (NRC). \\
-    \mono{-nr} & --- & Do not show redundancy (self complexity). \\
+    \mono{-nn} & N/A & Do not show normalized relative compression (NRC). \\
+    \mono{-nr} & N/A & Do not show redundancy (self complexity). \\
     && \smashpp performs reference-based and reference-free compressions to calculate the NRC and redundancy, respectively. If a user does not tend to show them, he/she can turn them off by ``-nn'' and ``-nr'' triggers. \\
     \midrule
-    \mono{-ni} & --- & Do not show inverse maps. \\
-    \mono{-ng} & --- & Do not show regular (not inverse) maps. \\
+    \mono{-ni} & N/A & Do not show inverse maps. \\
+    \mono{-ng} & N/A & Do not show regular (not inverse) maps. \\
     && \smashpp considers by default both regular and reverse complement maps in its calculations. \\
     \midrule
-    \mono{-h} & --- & Usage guide. \\
+    \mono{-h} & N/A & Usage guide. \\
     \midrule
-    \mono{-v} & --- & More information (verbose). \\
+    \mono{-v} & N/A & More information (verbose). \\
     \midrule
     \multicolumn{2}{@{}l@{}}{\mono{--version}} & Show version. \\
     \bottomrule
